<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">收到请回复</string>
    <string name="title"> 收到请回复</string>
    <string name="title_under">生活可以更简单</string>
    <string name="hello">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="msg">信息中心</string>
    <string name="group">我的群组</string>
    <string name="memo">备忘录</string>
    <string name="temp">模板大全</string>
    <string name="setting">设置</string>
    <string name="group_new">新建群组</string>
    <string name="group_name">群组名称：</string>
    <string name="group_name_input">群组名称</string>
    <string name="group_member">群组成员：</string>
    <string name="group_member_input">选取群组成员</string>
    <string name="name">姓名</string>
    <string name="phone">电话号码</string>
    <string name="contact_choose">联系人</string>
    <string name="msg_contact_input">点此添加收件人</string>
    <string name="msg_new">新建消息</string>
    <string name="msg_content_input">消息内容</string>
    <string name="about">关于</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_content_hint">点此输入您的反馈意见</string>
    <string name="feedback_contact_hint">联系方式：邮箱/QQ/手机号</string>
    <string name="submit">提交</string>
    <string name="time_memo">提醒时间</string>
    <string name="time_memo_colon">提醒时间:</string>
    <string name="time_happen">事件时间</string>
    <string name="time_happen_colon">事件时间:</string>
    <string name="time_set_happen">事件时间</string>
    <string name="time_set_memo">提醒时间</string>
    <string name="needmemo">是否提醒</string>
    <string name="memo_content">备忘内容</string>
    <string name="memo_content_colon">备忘内容:</string>
    <string name="msg_content">消息内容</string>
    <string name="msg_sendtime">发送时间</string>
    <string name="address">地点</string>
    <string name="address_colon">地点:</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="address_input">添加地点</string>
    <string name="version">Version</string>
    <string name="memo_new">新建备忘</string>
    <string name="group_choose">选择群组</string>
    <string name="temp_choose">选择模板</string>
    <string name="msg_settime">定时发送</string>
    <string name="msg_urgent">紧急通知</string>
    <string name="sign">Copyright © 2014&#8211;2015 NUAA. All Rights Reserved.</string>
    <string name="sign_short"> © 2014&#8211;2015 NUAA. </string>
    <string name="addmemo_content_input">备忘内容</string>
    <string name="memo_empty">还没有备忘事件呢\n点击右上角按钮添加吧</string>
    <string name="msg_empty">还没有任何消息呢\n点击右上角按钮发送一条吧</string>
    <string name="group_empty">还没有群组呢\n点击右上角按钮添加吧</string>
    <string name="temp_empty">还没有模板呢。。\n点击右上角按钮制作一个吧</string>
    <string name="temp_title">标题：</string>
    <string name="temp_content">内容：</string>
    <string name="temp_add">制作模板</string>
    <string name="temp_title_input">点此输入模板标题</string>
    <string name="temp_content_input">点此输入模板内容</string>
    <string name="receiver">接收者</string>
    <string name="temp_use">使用该模板</string>
    <string name="reply_list">回复情况</string>
</resources>