<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_checkmemo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FF9800"
            app:navigationIcon="@drawable/back_selector"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/memo" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView_checkMemo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/time_happen_colon"
                android:textColor="#212121"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView_checkmemo_time_happen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/time_happen"
                android:textColor="#727272"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/memo_content_colon"
                android:textColor="#212121"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView_checkmemo_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/memo_content"
                android:textColor="#727272"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_checkmemo_time_memo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/time_memo_colon"
                android:textColor="#212121"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView_checkmemo_time_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/time_memo"
                android:textColor="#727272"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/address_colon"
                android:textColor="#212121"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView_checkmemo_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/address"
                android:textColor="#727272"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

