<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="15dp">

    <ImageView
        android:id="@+id/imageView_msg_item_left"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/cycle"
        android:contentDescription="@string/hello"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/icon_msg" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_msg_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="left"
            android:singleLine="true"
            android:text="@string/name"
            android:textColor="#727272"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_msg_item_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/msg_content"
            android:textColor="#212121"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_msg_item_sendtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_sendtime"
            android:textColor="#727272"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>