<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_checkmsg"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#ff5252"
            app:navigationIcon="@drawable/back_selector"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/msg" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textView_checkmsg_sendtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/msg_sendtime"
        android:textColor="#727272"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView_checkmsg_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:text="@string/msg_content"
        android:textColor="#212121"
        android:textSize="17sp" />

</LinearLayout>