<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addgroup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_addgroup"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#03A9F4"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:navigationIcon="@drawable/back_selector"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/group_new" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout_focus"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_addgroup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/editText_addgroup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:hint="@string/group_name_input"
            android:textColor="#212121"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/editText_addgroup_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:focusable="false"
        android:hint="@string/group_member_input"
        android:textColor="#212121"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/listView_addgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="5dp"
        android:divider="#B6B6B6"
        android:dividerHeight="0.5dp" />

</LinearLayout>