<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sendmsg_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11c0c0c0"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_sendmsg"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#ff5252"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:navigationIcon="@drawable/back_selector"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/msg_new" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textView_sendmsg_receiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff5252"
        android:paddingLeft="15dp"
        android:text="@string/receiver"
        android:textColor="#9fffffff" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#ff5252"
        android:gravity="center"
        android:paddingLeft="15dp">

        <ImageButton
            android:id="@+id/imageButton_sendmsg_add"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:contentDescription="@string/hello"
            android:scaleType="centerInside"
            android:src="@drawable/addcontact" />

        <EditText
            android:id="@+id/editText_sendmsg_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/imageButton_sendmsg_add"
            android:background="@null"
            android:ellipsize="end"
            android:focusable="false"
            android:hint="@string/msg_contact_input"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_toLeftOf="@id/imageButton_sendmsg_add"
            android:background="#ffffff" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#B6B6B6"
        android:contentDescription="@string/hello" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#C0C0C0"
        android:contentDescription="@string/hello" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/imageButton_sendmsg_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:background="@null"
            android:contentDescription="@string/hello"
            android:paddingLeft="3dp"
            android:scaleType="centerInside"
            android:src="@drawable/contact_add_selector" />

        <ImageButton
            android:id="@+id/imageButton_sendmsg_send"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:contentDescription="@string/hello"
            android:scaleType="fitCenter"
            android:src="@drawable/sendout_selector" />

        <EditText
            android:id="@+id/editText_sendmsg_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@id/imageButton_sendmsg_send"
            android:layout_toRightOf="@id/imageButton_sendmsg_menu"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/msg_content_input"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textColor="#212121"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/editText_sendmsg_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="3dp"
            android:layout_toLeftOf="@id/imageButton_sendmsg_send"
            android:layout_toRightOf="@id/imageButton_sendmsg_menu"
            android:background="#C0C0C0"
            android:contentDescription="@string/hello" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout_sendmsg_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <Space
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.25" />

        <LinearLayout
            android:id="@+id/linearLayout_sendmsg_menu_temp"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton_sendmsg_menu_temp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/menu_temp_selector"
                android:contentDescription="@string/hello" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/temp_choose"
                android:textColor="#727272"
                android:textSize="13sp" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.25" />

        <LinearLayout
            android:id="@+id/linearLayout_sendmsg_menu_settime"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton_sendmsg_menu_settime"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/settime_selector"
                android:contentDescription="@string/hello" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/msg_settime"
                android:textColor="#727272"
                android:textSize="13sp" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.25" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton_sendmsg_menu_urgent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/urgent_selector"
                android:contentDescription="@string/hello" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/msg_urgent"
                android:textColor="#727272"
                android:textSize="13sp" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.25" />
    </LinearLayout>

</LinearLayout>