<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_addmemo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/memo"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:navigationIcon="@drawable/back_selector"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/memo_new" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView_addmemo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="centerInside"
                    android:src="@drawable/clock"
                    android:tint="#b6b6b6" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="28dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/location"
                    android:tint="#b6b6b6" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="30dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/bell"
                    android:tint="#b6b6b6" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="73dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/content"
                    android:tint="#b6b6b6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_addmemo_time_happen"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:focusable="false"
                    android:hint="@string/time_set_happen"
                    android:textColor="#212121"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#B6B6B6" />

                <EditText
                    android:id="@+id/editText_addmemo_address"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/address_input"
                    android:textColor="#212121"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#B6B6B6" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/needmemo" />

                    <CheckBox
                        android:id="@+id/checkBox_addmemo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editText_addmemo_time_memo"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:focusable="false"
                    android:hint="@string/time_set_memo"
                    android:textColor="#212121"
                    android:textColorHint="#9fb6b6b6"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="18dp"
                    android:layout_marginTop="8dp"
                    android:background="#B6B6B6" />

                <EditText
                    android:id="@+id/editText_addmemo_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/memo_content"
                    android:minLines="5"
                    android:textColor="#212121"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>